# NemoClaw-Forge

./: .coverage  README.md  nemoclaw_ledger.db  pyproject.toml  requirements.txt  scout_and_report.sh  start_ledger.sh
reports/: 2026-03-18-scout.md  2026-03-19-scout.md  2026-03-20-scout.md  2026-03-21-scout.md
src/nemoclaw_forge/: __init__.py  api.py  brain.py  claw.py  cli.py  forge.py  ledger.py  sandbox.py  scout.py
src/nemoclaw_forge/static/: index.html
tests/: test_claw.py  test_forge.py
