[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemoclaw-forge"
version = "0.1.0"
description = "A distributed AI Agent orchestration engine."
authors = [{ name = "NemoClaw Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nemoclaw = "nemoclaw_forge.cli:main"
